--- a/SvgMakerCore/SvgMakerCore.csproj
+++ b/SvgMakerCore/SvgMakerCore.csproj
@@ -53,7 +53,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\MoveablePoint.cs" />
+    <Compile Include="Controls\PointsDrawer.cs" />
+    <Compile Include="Geometry2D\Bezier2D.cs" />
+    <Compile Include="Bezier2DVm.cs" />
+    <Compile Include="Geometry2D\Constans.cs" />
+    <Compile Include="Geometry2D\Geometry2D.cs" />
+    <Compile Include="Geometry2D\Line2D.cs" />
+    <Compile Include="Geometry2D\Utility.cs" />
     <Compile Include="MainWindowVm.cs" />
+    <Compile Include="Point2DVm.cs" />
     <Compile Include="Wpf\ActionCommand.cs" />
     <Compile Include="Wpf\NotifyPropertyChanger.cs" />
     <Compile Include="Wpf\WpfEx.cs" />
@@ -65,11 +74,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Control\GridCanvas.cs" />
+    <Compile Include="Controls\GridCanvas.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
