Operation回りをメソッドチェインで完結に書ける機能を実装

--- a/SvgMakerCore/SvgMakerCore.csproj
+++ b/SvgMakerCore/SvgMakerCore.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Core\Ipc\IpcClient.cs" />
     <Compile Include="Core\Ipc\IpcServer.cs" />
     <Compile Include="Core\Operation\ListOperation.cs" />
+    <Compile Include="Core\Operation\OperationExtensions.cs" />
     <Compile Include="Core\Reflection\FastReflection.cs" />
     <Compile Include="Core\Reflection\PropertyAccesser.cs" />
     <Compile Include="Core\Ipc\RemoteEvent.cs" />
